--- a/style/index.css
+++ b/style/index.css
@@ -57,21 +57,19 @@ nav a  {
     padding: 30px 30px 0px 150px;
     display: flex;
     align-items: center;
+    justify-content: space-between;
 }
 
 .header {
     width: 100%;
-    height: auto;
+    height: 700px;
     background-color: #fff8f3;
     background-image: url("../img/header_bg.png");
     background-repeat: no-repeat;
     background-position: bottom right;
 }
 
-.img  img{
-    width: 300px;
-    height: 200px;
-}
+
 
 
 .banner-greeting {
@@ -84,7 +82,7 @@ nav a  {
     font-weight: 700;
     text-transform: capitalize;
     margin-top: 5px;
-    margin-top: 20px;
+    margin-bottom: 7px;
 }
 
 .distext {
@@ -95,6 +93,247 @@ nav a  {
     width: 50%;
 }
 .btn-primary {
-    width: 190px;
-    height: 30px;
+    width: auto;
+    padding: 9px;
+    height: 50px;
+    bottom: 50px;
+    
+   
+}
+div .img  {
+    width: 600px;
+    height: 544px;
+    margin-bottom: 0px;
+  margin-left: 200px;
+  position:0 0 ;
+  
+}
+
+/* about */
+.about {
+    width: 80%;
+    height: 400px;
+    margin-top: 100px;
+    background-color: antiquewhite;
+    margin: 0 auto;
+    text-align: center;
+    align-items: center;
+}
+.about-title {
+    font-size: 40px;
+    margin-top: 20px;
+    padding-top: 20px;
+    padding-bottom: 0px;
+    align-items: center;
+    text-align: center;
+    text-transform: capitalize;
+}
+.about-dis {
+    width: 60%;
+    margin: 0 auto;
+    font-size: 20px;
+    text-transform: capitalize;
+    align-items: center;
+    text-align: center;
+}
+.itembox{
+    width: 60%;
+    display: flex;
+    margin: 0 auto;
+    margin-top: 100px;
+    justify-content: space-around;
+}
+.item1 {
+    text-align: center;
+    font-size:20;
+    font-style: normal;
+    text-transform: capitalize;
+}
+.item2{
+    font-size: 20px;
+
+}
+/*what is do*/
+.what {
+    width: 95%;
+    height: 650px;
+    margin: 0 auto;
+   margin-bottom: 50px;
+    background-color: #fff8f3;
+   margin-top: 100px;
+   
+}
+.what-title {
+    text-align: center;
+    padding-top: 50px;
+    text-transform: capitalize;
+    font-size: 40px;
+}
+.what-dis {
+    width: 50%;
+    text-align: center;
+    align-items: center;
+    margin: 0 auto;
+    font-size: 20px;
+    text-transform: capitalize;
+
+}
+.ditels {
+    display: flex;
+    padding-top: 50px;
+    margin: 0 auto;
+    justify-content: space-around;
+    
+}
+.ditels div {
+    width: 250px;
+    height: 400px;
+    margin-left: 15px;
+    text-align: ;
+    justify-content: space-around;
+    border: 1 solid black;
+    background-color: aliceblue;
+    margin-right: 20px;
+    box-shadow: 5px 3px 5px #fff8f3; 
+}
+.ditels div img {
+    align-items: center;
+    
+    margin-top: 40px;
+    margin-left: 30px;
+
+}
+.ditels h2 {
+    margin-left: 30px;
+    font-size: 26px;
+    text-transform: capitalize;
+}
+.ditels p {
+    width: 210px;
+    font-size: 19px;
+    margin-left: 20px;
+    text-transform: capitalize;
+}
+/*summary */
+.summary {
+    width: 80%;
+    height: 800px;
+    margin: 0 auto;
+    align-items: center;
+   
+    margin-bottom: 50px;
+}
+.summary h1{
+    text-align: center;
+    font-size: 40px;
+    text-transform: capitalize;
+    padding-top: 50px;
+}
+.summary-form {
+    display: flex;
+    padding: 20px;
+}
+.sunnary-text1 ,.sunnary-text {
+    width: 45%;
+    padding: 10px;
+    margin: 0 auto;
+    margin-top: 50px;
+}
+.heading {
+    font-size: 30px;
+    text-transform: capitalize;
+    margin-top: 0px;
+    padding-bottom: 0px;
+}
+.heading2{
+    font-size: 20px;
+    text-transform: capitalize;
+    margin-top: 0px;
+
+}
+.pdis {
+    text-transform: capitalize;
+    font-size: 18px;
+    margin-top: 0px;
+}
+.summary  .sunnary-button {
+    width: 200px;
+    height: 50px;
+    padding: 10px;
+    margin-left: 470px;
+    font-size: 20px;
+    text-transform: capitalize;
+    border-radius: 7px;
+    align-items: center;
+    background-color: #FD6E0A;
+    margin-bottom: 50px;
+}
+/*footer */ 
+.footer {
+    width: 100%;
+    height: 600px;
+    margin-top: 200px;
+   
+    background-color: antiquewhite;
+    
+}
+.footer-detels {
+    display: flex;
+    justify-content: space-around;
+}
+
+.icom , .messges {
+    width: 50%;
+    margin-left: 40px;
+}
+.icom  h1 ,.messge{
+    font-size: 40px;
+    padding-top: 50px;
+    padding-left: 100px;
+    text-transform: capitalize;
+
+}
+.icom p {
+    font-size: 20px;
+    padding-left: 100px;
+    text-transform: capitalize;
+}
+
+.icom div img {
+    padding-top: 50px;
+    padding-left: 100px;
+}
+.messges  h1{
+    font-size: 40px;
+    padding-top: 50px;
+    padding-left: 100px;
+    margin-top: 20px;
+
+    text-transform: capitalize;
+}
+.messges input {
+   width: 250px;
+   padding: 10px;
+   margin-top: 30px;
+   margin-left: 100px;
+   border: 1 solid white;
+   outline: white;
+   border-radius: 7px;
+   
+
+}
+.messges-text {
+    width: 230px;
+    height: 140px;
+    ;
+    
+}
+.submit {
+    width: 140px;
+    height: 40px;
+    background-color: #FD6E0A;
+    font-size: 19px;
+    margin-top: 20px;
+    margin-left: 100px;
+    border-radius: 7px;
 }
